--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@logseq/libs": "^0.0.14"
+    "@logseq/libs": "^0.0.14",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@semantic-release/changelog": "6.0.3",
@@ -17,12 +19,16 @@
     "@semantic-release/git": "10.0.1",
     "@semantic-release/npm": "10.0.3",
     "@types/node": "18.16.5",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "5.59.2",
     "@typescript-eslint/parser": "5.59.2",
     "@vitejs/plugin-react": "3.1.0",
     "autoprefixer": "10.4.14",
     "conventional-changelog-conventionalcommits": "5.0.0",
     "eslint": "8.40.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "semantic-release": "21.0.2",
     "typescript": "4.9.5",
     "vite": "4.3.5",
